add: gitignore에 제외값 추가

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@ build/
 !**/src/main/**
 !**/src/test/**
 
+### Compiled class file ###
+*.class
+
+### Log file ###
+*.log
+
 ### STS ###
 .apt_generated
 .classpath
